; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_execute.c_ecpg_do_epilogue.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_execute.c_ecpg_do_epilogue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.statement = type { i64, i32 }

@LC_NUMERIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ecpg_do_epilogue(%struct.statement* %0) #0 {
  %2 = alloca %struct.statement*, align 8
  store %struct.statement* %0, %struct.statement** %2, align 8
  %3 = load %struct.statement*, %struct.statement** %2, align 8
  %4 = icmp eq %struct.statement* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %20

6:                                                ; preds = %1
  %7 = load %struct.statement*, %struct.statement** %2, align 8
  %8 = getelementptr inbounds %struct.statement, %struct.statement* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %6
  %12 = load i32, i32* @LC_NUMERIC, align 4
  %13 = load %struct.statement*, %struct.statement** %2, align 8
  %14 = getelementptr inbounds %struct.statement, %struct.statement* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @setlocale(i32 %12, i64 %15)
  br label %17

17:                                               ; preds = %11, %6
  %18 = load %struct.statement*, %struct.statement** %2, align 8
  %19 = call i32 @free_statement(%struct.statement* %18)
  br label %20

20:                                               ; preds = %17, %5
  ret void
}

declare dso_local i32 @setlocale(i32, i64) #1

declare dso_local i32 @free_statement(%struct.statement*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
